; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_buf_table.c_BufTableDelete.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_buf_table.c_BufTableDelete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SharedBufHash = common dso_local global i32 0, align 4
@HASH_REMOVE = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"shared buffer hash table corrupted\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BufTableDelete(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @SharedBufHash, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = bitcast i32* %7 to i8*
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @HASH_REMOVE, align 4
  %11 = call i64 @hash_search_with_hash_value(i32 %6, i8* %8, i32 %9, i32 %10, i32* null)
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %2
  %16 = load i32, i32* @ERROR, align 4
  %17 = call i32 @elog(i32 %16, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %15, %2
  ret void
}

declare dso_local i64 @hash_search_with_hash_value(i32, i8*, i32, i32, i32*) #1

declare dso_local i32 @elog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
